<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="36dp"
                android:layout_height="36dp"
                app:srcCompat="@drawable/ic_user"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/admin_app"
                android:layout_marginStart="16dp"
                android:textSize="18sp"
                android:textColor="@color/title_color"
                android:layout_gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/nTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="@string/_2_20_pm" />

            <TextView
                android:layout_marginHorizontal="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:text="@string/dot" />

            <TextView
                android:id="@+id/nDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_15_aug_2020" />

        </LinearLayout>


        <TextView
            android:id="@+id/noticeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/this_is_text"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            android:textColor="@color/title_color"
            android:textStyle="italic"/>

        <ImageView
            android:id="@+id/notPre"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/todo">
        </ImageView>
        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:id="@+id/updateNotice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:text="@string/update"
            android:layout_gravity="center_horizontal"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black"
            android:layout_marginTop="10dp"/>
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>