<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Faculty.AddTeacherActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/teacherImg"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/ic_user"
            tools:ignore="VectorDrawableCompat"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"/>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:hint="@string/faculty_name" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/faculty_e_mail"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/faculty_phone_number"
                android:inputType="phone"/>
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fPost"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/faculty_post" />
        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/teacherCategory"
            android:spinnerMode="dropdown"
            android:gravity="center"
            android:background="@android:drawable/btn_dropdown"
            android:layout_marginVertical="16dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/addFac"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/add_faculty"
            android:textAllCaps="false"
            android:layout_marginBottom="20dp"/>

    </LinearLayout>


</ScrollView>