<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="4dp"
    android:padding="2dp"
    android:elevation="10dp"
    app:cardCornerRadius="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="#AEB4D3"
            android:weightSum="2">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.8"
                android:orientation="vertical"
                android:padding="10dp"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/facultyName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sourish_mitra"
                    android:textColor="@color/textColor"
                    android:textSize="16sp"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:ellipsize="marquee"
                    android:singleLine="true"
                    android:textAllCaps="true"
                    android:scrollHorizontally="true"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/facultyPost"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/assistent_professor"
                    android:textColor="@color/textColor"
                    android:textSize="16sp"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:ellipsize="marquee"
                    android:scrollHorizontally="true"
                    android:singleLine="true"/>

                <TextView
                    android:id="@+id/facultyMail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sourish_gmail_com"
                    android:textColor="@color/textColor"
                    android:textSize="16sp"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:ellipsize="marquee"
                    android:scrollHorizontally="true"
                    android:singleLine="true"/>

                <TextView
                    android:id="@+id/facultyPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/_9876789658"
                    android:textColor="@color/textColor"
                    android:textSize="16sp"
                    android:marqueeRepeatLimit="marquee_forever"
                    android:ellipsize="marquee"
                    android:singleLine="true"/>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/facultyUpdate"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/update_info"
                    android:textSize="16sp"
                    android:textAllCaps="false"/>
            </LinearLayout>

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/facultyImage"
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:src="@drawable/ic_user"
                tools:ignore="VectorDrawableCompat"
                android:padding="5dp"
                android:layout_weight="0.2"
                android:layout_gravity="center_horizontal"/>



        </LinearLayout>

</com.google.android.material.card.MaterialCardView>