<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Pdf.UploadPdfActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/addPdf"
                android:layout_width="130dp"
                android:layout_height="150dp"
                android:layout_margin="10dp"
                android:elevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:background="@drawable/circle_pdf"
                        android:padding="15dp"
                        app:srcCompat="@drawable/ic_pdf"
                        android:contentDescription="@string/todo" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="10dp"
                        android:background="@color/grey" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/choose_pdf"
                        android:textColor="@color/textColor"
                        android:textStyle="bold" />


                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>

        <TextView
            android:id="@+id/pdfText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_file_chosen"
            android:layout_gravity="center"
            android:textSize="16sp"/>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp"
                android:hint="@string/pdf_title" />
        </com.google.android.material.textfield.TextInputLayout>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/yearCategory"
            android:spinnerMode="dropdown"
            android:gravity="center"
            android:background="@android:drawable/btn_dropdown"
            android:layout_marginVertical="5dp"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/streamCategory"
            android:spinnerMode="dropdown"
            android:gravity="center"
            android:background="@android:drawable/btn_dropdown"
            android:layout_marginVertical="5dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/upPdf"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:text="@string/upload_pdf"
            android:textAllCaps="false" />


    </LinearLayout>

</ScrollView>